# python-app-template

./: LICENSE  README.md  pyproject.toml
pyapp/: main.py
tests/: test_about.py
